# pico-phone

./: CMakeLists.txt  README.md  copy-to-device.sh  mp3toc.sh  read-binary.py  read-wav.py
audio/: CMakeLists.txt
audio/sine_wave/: CMakeLists.txt
audio/wav/: CMakeLists.txt  cantina_data.h  wav.c  wav.h
include/: lorem.h
mp3/: CMakeLists.txt  mp3.cpp  tags
mp3/src/: CMakeLists.txt
mp3/src/mp3_decoder/: CMakeLists.txt
